kubernetes/apps/devtools/jupyterhub/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "JupyterHub"
    gethomepage.dev/group: "Infrastructure"
    gethomepage.dev/icon: "https://cdn.jsdelivr.net/gh/homarr-labs/dashboard-icons/svg/jupyter.svg"
    gethomepage.dev/href: "https://jupyterhub.${DOMAIN}"
  name: jupyterhub
spec:
  hostnames:
    - jupyterhub.${DOMAIN}
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: proxy-public
          port: 80
